Upgraded JDK to 17